fix gallery,speaker,contact footer and workshop card collaps

--- a/css/contact_style.css
+++ b/css/contact_style.css
@@ -41,16 +41,15 @@ body {
     font-family: 'Sarabun', sans-serif;
     background-color: #ffffff;
     margin: 0;
-    padding: 20px;
     color: #2c2c2c;
 }
 
-.container {
+.container_body {
     max-width: 1100px;
     margin: 0 auto;
     background-color: #ffffff;
     padding: 40px;
-    box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
     border-radius: 12px;
 }
 
