--- a/css/speaker_style.css
+++ b/css/speaker_style.css
@@ -24,7 +24,7 @@ body {
     background: #f4f4f4;
 }
 
-.container {
+.container_body {
     width: 80%;
     margin: 20px auto;
     background: #fff;
